Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-6428

Lustre client Compilation failed build with kernel 3.2

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.8.0
    • None
    • lustre-2.7.51
      Ubuntu 12.04
      Kernel Version: kernel 3.2.68
    • 3
    • 9223372036854775807

      While compiling the Lustre client with newer kernel. It fails with the following error:
      Command Used to compile:
      ./configure
      --with-linux=$

      {kernel_source_dir}

      --with-o2ib=$

      {dkms_tree}

      /mlnx-ofed-kernel/$

      {OFED_VERSION}

      /build
      --disable-server
      --disable-quilt
      --disable-dependency-tracking
      --disable-doc
      --disable-utils
      --disable-liblustre
      --disable-snmp
      --disable-zerocopy
      --disable-tests
      --enable-quota
      make
      Error:-
      /var/lib/dkms/lustre/2.5.24/build/lustre/llite/dcache.c: In function
      'll_invalidate_aliases':
      /var/lib/dkms/lustre/2.5.24/build/lustre/llite/dcache.c:302:2: error:
      'struct dentry' has no member named 'd_alias'
      /var/lib/dkms/lustre/2.5.24/build/lustre/llite/dcache.c:302:2: error:
      initialization from incompatible pointer type [-Werror]
      /var/lib/dkms/lustre/2.5.24/build/lustre/llite/dcache.c:302:2: error:
      'struct dentry' has no member named 'd_alias'
      /var/lib/dkms/lustre/2.5.24/build/lustre/llite/dcache.c:302:2: error:
      'struct dentry' has no member named 'd_alias'
      /var/lib/dkms/lustre/2.5.24/build/lustre/llite/dcache.c:302:2: error:
      'struct dentry' has no member named 'd_alias'
      /var/lib/dkms/lustre/2.5.24/build/lustre/llite/dcache.c:302:2: error:
      'struct dentry' has no member named 'd_alias'
      /var/lib/dkms/lustre/2.5.24/build/lustre/llite/dcache.c:302:2: error:
      'struct dentry' has no member named 'd_alias'
      cc1: all warnings being treated as errors

            bogl Bob Glossman (Inactive)
            gnlwlb wu libin (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            9 Start watching this issue

              Created:
              Updated:
              Resolved: