LU-6428 llite: Add check of d_alias and d_child

In some specific kernel versions like debian wheezy 3.2 or Ubuntu
14.04, d_alias has been moved to d_u.d_alias and d_u.d_child has
been moved to d_child in struct dentry in <linux/dcache.h>. This
patch add a check of this two members to make the llite be
compatible with those versions.

Signed-off-by: Wu Libin <lwu@ddn.com>
Signed-off-by: James Simmons <uja.ornl@yahoo.com>
Change-Id: I8ae63fdd887609e2049ac5e90f2bf4ff2ab14fd4
Reviewed-on: http://review.whamcloud.com/14060
Reviewed-by: Bob Glossman <bob.glossman@intel.com>
Tested-by: Jenkins
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Thomas Stibor <t.stibor@gsi.de>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>